--- a/src/stream_test.ipynb
+++ b/src/stream_test.ipynb
@@ -25,7 +25,7 @@
     "from diffusers import AutoencoderTiny, StableDiffusionPipeline\n",
     "from diffusers.utils import load_image\n",
     "#s\n",
-    "from stresamdiffusion import StreamDiffusion\n",
+    "from streamdiffusion import StreamDiffusion\n",
     "from streamdiffusion.image_utils import postprocess_image"
    ]
   },
